--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -4,13 +4,73 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            Usuario loggeado: %CURRENT_USER%
-        </div>
-        <div class="col-12">
             <form action="%REQUEST_URI%" method="POST">
-                <input type="text" name="nombre" />
-                <input type="submit" name="submitted" value="Guardar"/>
+                <div class="form-group">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa el nombre del paciente">
+                </div>
+
+                <div class="form-group col-sm-8">
+                    <label for="fechadenacimiento">Fecha de Nacimiento</label>
+                    <input type="text" class="form-control" id="fechadenacimiento" name="fechadenacimiento" placeholder="Ingresa el nombre del paciente">
+                </div>
+                <div class="col-sm-4">
+                    <span>Edad:
+                        <span id="edad-span"></span>
+                    </span>
+                    <input type="hidden" id="edad" name="edad">
+                </div>
+                <div class="form-group">
+                    <label for="escolaridad">Escolaridad</label>
+                    <input type="text" class="form-control" id="escolaridad" name="escolaridad" placeholder="Ingresa la escolaridad del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="ocupacion">Ocupación</label>
+                    <input type="text" class="form-control" id="ocupacion" name="ocupacion" placeholder="Ingresa la ocupación del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="estadocivil">Estado Civil</label>
+                    <input type="text" class="form-control" id="estadocivil" name="estadocivil" placeholder="Ingresa el estado civil del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="cantidadhijos">Cantidad de Hijos</label>
+                    <input type="number" class="form-control" id="cantidadhijos" name="cantidadhijos" placeholder="Ingresa la cantidad de hijos del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="domicilio">Domicilio</label>
+                    <input type="text" class="form-control" id="domicilio" name="domicilio" placeholder="Ingresa el domicilio del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="ciudaddeorigen">Ciudad de Origen</label>
+                    <input type="text" class="form-control" id="ciudaddeorigen" name="ciudaddeorigen" placeholder="Ingresa la ciudad de origen del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="telefono">Teléfono</label>
+                    <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Ingresa el teléfono del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Ingresa el correo electrónico del paciente">
+                </div>
+                <div class="form-group">
+                    <label for="enfermedades">Enfermedades</label>
+                    <textarea class="form-control" id="enfermedades" name="enfermedades" placeholder="Ingresa las enfermedades del paciente"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="alergias">Alergias</label>
+                    <textarea class="form-control" id="alergias" name="alergias" placeholder="Ingresa las alergias del paciente"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="responsable">Responsable</label>
+                    <input type="text" class="form-control" id="responsable" name="responsable" value="%CURRENT_USER%" readonly >
+                </div>
+                
+                <button type="submit" class="btn btn-primary" name="submitted">Guardar</button>
             </form>
         </div>
     </div>
 </div>
+
+<script>
+    alert('js works');
+</script>
