--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -9,16 +9,17 @@
                     <label for="nombre">Nombre</label>
                     <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa el nombre del paciente">
                 </div>
-
-                <div class="form-group col-sm-8">
-                    <label for="fechadenacimiento">Fecha de Nacimiento</label>
-                    <input type="text" class="form-control" id="fechadenacimiento" name="fechadenacimiento" placeholder="Ingresa el nombre del paciente">
-                </div>
-                <div class="col-sm-4">
-                    <span>Edad:
-                        <span id="edad-span"></span>
-                    </span>
-                    <input type="hidden" id="edad" name="edad">
+                <div class="row">
+                    <div class="form-group col-sm-8">
+                        <label for="fechadenacimiento">Fecha de Nacimiento</label>
+                        <input type="text" class="form-control" id="fechadenacimiento" name="fechadenacimiento" placeholder="Ingresa el nombre del paciente">
+                    </div>
+                    <div class="col-sm-4">
+                        <span>Edad:
+                            <span id="edad-span"></span>
+                        </span>
+                        <input type="hidden" id="edad" name="edad">
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="escolaridad">Escolaridad</label>
@@ -62,9 +63,9 @@
                 </div>
                 <div class="form-group">
                     <label for="responsable">Responsable</label>
-                    <input type="text" class="form-control" id="responsable" name="responsable" value="%CURRENT_USER%" readonly >
+                    <input type="text" class="form-control" id="responsable" name="responsable" value="%CURRENT_USER%" readonly>
                 </div>
-                
+
                 <button type="submit" class="btn btn-primary" name="submitted">Guardar</button>
             </form>
         </div>
@@ -72,5 +73,5 @@
 </div>
 
 <script>
-    alert('js works');
+    // alert('js works');
 </script>
