--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -7,15 +7,16 @@
             <form class="row" action="%REQUEST_URI%" method="POST">
                 <div class="form-group col-6">
                     <label for="nombre">Fotografía</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa el nombre del paciente">
+                    <input type="text" class="form-control" id="nombre" name="fotografia">
                 </div>
                 <div class="form-group col-6">
                     <label for="nombre">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa el nombre del paciente">
+                    <input type="text" class="form-control" id="nombre" name="nombre">
                 </div>
                 <div class="form-group col-sm-8">
                     <label for="fechadenacimiento">Fecha de Nacimiento</label>
-                    <input type="text" class="form-control" id="fechadenacimiento" name="fechadenacimiento" placeholder="Ingresa el nombre del paciente">
+                    <input id="fechadenacimiento" name="fechadenacimiento"/>
+                    <input type="text" class="form-control" id="fechadenacimiento" name="fechadenacimiento">
                 </div>
                 <div class="col-sm-4">
                     <span>Edad:
@@ -25,55 +26,60 @@
                 </div>
                 <div class="form-group col-6">
                     <label for="escolaridad">Escolaridad</label>
-                    <input type="text" class="form-control" id="escolaridad" name="escolaridad" placeholder="Ingresa la escolaridad del paciente">
+                    <input type="text" class="form-control" id="escolaridad" name="escolaridad">
                 </div>
                 <div class="form-group col-6">
                     <label for="ocupacion">Ocupación</label>
-                    <input type="text" class="form-control" id="ocupacion" name="ocupacion" placeholder="Ingresa la ocupación del paciente">
+                    <input type="text" class="form-control" id="ocupacion" name="ocupacion">
                 </div>
                 <div class="form-group col-6">
                     <label for="estadocivil">Estado Civil</label>
-                    <input type="text" class="form-control" id="estadocivil" name="estadocivil" placeholder="Ingresa el estado civil del paciente">
+                    <input type="text" class="form-control" id="estadocivil" name="estadocivil">
                 </div>
                 <div class="form-group col-6">
                     <label for="cantidadhijos">Cantidad de Hijos</label>
-                    <input type="number" class="form-control" id="cantidadhijos" name="cantidadhijos" placeholder="Ingresa la cantidad de hijos del paciente">
+                    <input type="number" class="form-control" id="cantidadhijos" name="cantidadhijos">
                 </div>
                 <div class="form-group col-6">
                     <label for="domicilio">Domicilio</label>
-                    <input type="text" class="form-control" id="domicilio" name="domicilio" placeholder="Ingresa el domicilio del paciente">
+                    <input type="text" class="form-control" id="domicilio" name="domicilio">
                 </div>
                 <div class="form-group col-6">
                     <label for="ciudaddeorigen">Ciudad de Origen</label>
-                    <input type="text" class="form-control" id="ciudaddeorigen" name="ciudaddeorigen" placeholder="Ingresa la ciudad de origen del paciente">
+                    <input type="text" class="form-control" id="ciudaddeorigen" name="ciudaddeorigen">
                 </div>
                 <div class="form-group col-6">
                     <label for="telefono">Teléfono</label>
-                    <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Ingresa el teléfono del paciente">
+                    <input type="text" class="form-control" id="telefono" name="telefono">
                 </div>
                 <div class="form-group col-6">
                     <label for="email">Correo Electrónico</label>
-                    <input type="text" class="form-control" id="email" name="email" placeholder="Ingresa el correo electrónico del paciente">
+                    <input type="text" class="form-control" id="email" name="email">
                 </div>
                 <div class="form-group col-6">
                     <label for="enfermedades">Enfermedades</label>
-                    <textarea class="form-control" id="enfermedades" name="enfermedades" placeholder="Ingresa las enfermedades del paciente"></textarea>
+                    <textarea class="form-control" id="enfermedades" name="enfermedades"></textarea>
                 </div>
                 <div class="form-group col-6">
                     <label for="alergias">Alergias</label>
-                    <textarea class="form-control" id="alergias" name="alergias" placeholder="Ingresa las alergias del paciente"></textarea>
+                    <textarea class="form-control" id="alergias" name="alergias"></textarea>
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12">
                     <label for="responsable">Responsable</label>
                     <input type="text" class="form-control" id="responsable" name="responsable" value="%CURRENT_USER%" readonly>
                 </div>
-
-                <button type="submit" class="btn btn-primary" name="submitted">Guardar</button>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary" name="submitted">Guardar</button>
+                </div>
             </form>
         </div>
     </div>
 </div>
 
 <script>
-    // alert($('fechadenacimiento').value);
+    jQuery(document).ready(function( $ ) {
+        $('#fechadenacimiento').datepicker({
+            uiLibrary: 'bootstrap4'
+        });
+    });
 </script>
