Formulario de agregar paciente

--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -16,7 +16,7 @@
                 <div class="form-group col-sm-8">
                     <label for="fechadenacimiento">Fecha de Nacimiento</label>
                     <input id="fechadenacimiento" name="fechadenacimiento"/>
-                    <input type="text" class="form-control" id="fechadenacimiento" name="fechadenacimiento">
+                    <!-- <input type="text" class="form-control" id="fechadenacimiento" name="fechadenacimiento"> -->
                 </div>
                 <div class="col-sm-4">
                     <span>Edad:
