Formulario de agregar paciente

--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -79,7 +79,9 @@
 <script>
     jQuery(document).ready(function( $ ) {
         $('#fechadenacimiento').datepicker({
-            uiLibrary: 'bootstrap4'
+            uiLibrary: 'bootstrap4',
+            locale: 'es-es',
+            format: 'dd/mm/yyyy'
         });
     });
 </script>
