Formulario de agregar paciente

--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -81,7 +81,7 @@
         $('#fechadenacimiento').datepicker({
             uiLibrary: 'bootstrap4',
             locale: 'es-es',
-            format: 'dd/mm/yyyy'
+            format: 'dd mmmm yyyy'
         });
     });
 </script>
