Formulario de agregar paciente

--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -80,8 +80,7 @@
     jQuery(document).ready(function( $ ) {
         $('#fechadenacimiento').datepicker({
             uiLibrary: 'bootstrap4',
-            locale: 'es-es',
-            format: 'dd mmmm yyyy'
+            locale: 'es',
         });
     });
 </script>
