--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -79,8 +79,7 @@
 <script>
     jQuery(document).ready(function( $ ) {
         $('#fechadenacimiento').datepicker({
-            uiLibrary: 'bootstrap4',
-            locale: 'es',
+            uiLibrary: 'bootstrap4'
         });
     });
 </script>
