--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -5,11 +5,11 @@
     <div class="row">
         <div class="col-12">
             <form class="row" action="%REQUEST_URI%" method="POST">
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="nombre">Fotografía</label>
                     <input type="text" class="form-control" id="nombre" name="fotografia">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="nombre">Nombre</label>
                     <input type="text" class="form-control" id="nombre" name="nombre">
                 </div>
@@ -24,43 +24,43 @@
                     </span>
                     <input type="hidden" id="edad" name="edad">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="escolaridad">Escolaridad</label>
                     <input type="text" class="form-control" id="escolaridad" name="escolaridad">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="ocupacion">Ocupación</label>
                     <input type="text" class="form-control" id="ocupacion" name="ocupacion">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="estadocivil">Estado Civil</label>
                     <input type="text" class="form-control" id="estadocivil" name="estadocivil">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="cantidadhijos">Cantidad de Hijos</label>
                     <input type="number" class="form-control" id="cantidadhijos" name="cantidadhijos">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="domicilio">Domicilio</label>
                     <input type="text" class="form-control" id="domicilio" name="domicilio">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="ciudaddeorigen">Ciudad de Origen</label>
                     <input type="text" class="form-control" id="ciudaddeorigen" name="ciudaddeorigen">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="telefono">Teléfono</label>
                     <input type="text" class="form-control" id="telefono" name="telefono">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="email">Correo Electrónico</label>
                     <input type="text" class="form-control" id="email" name="email">
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="enfermedades">Enfermedades</label>
                     <textarea class="form-control" id="enfermedades" name="enfermedades"></textarea>
                 </div>
-                <div class="form-group col-6">
+                <div class="form-group col-12 col-sm-6">
                     <label for="alergias">Alergias</label>
                     <textarea class="form-control" id="alergias" name="alergias"></textarea>
                 </div>
