--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -11,11 +11,11 @@
                 </div>
                 <div class="form-group col-12 col-sm-6">
                     <label for="nombre">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre">
+                    <input type="text" class="form-control" id="nombre" name="nombre" required>
                 </div>
                 <div class="form-group col-sm-8">
                     <label for="fechadenacimiento">Fecha de Nacimiento</label>
-                    <input id="fechadenacimiento" name="fechadenacimiento"/>
+                    <input id="fechadenacimiento" name="fechadenacimiento"/ required>
                 </div>
                 <div class="col-sm-4">
                     <span>Edad:
