--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -78,7 +78,8 @@
 <script>
     jQuery(document).ready(function( $ ) {
         $('#fechadenacimiento').datepicker({
-            uiLibrary: 'bootstrap4'
+            uiLibrary: 'bootstrap4',
+            format: 'yyyy-dd-mm'
         });
 
         $('#fechadenacimiento').change(function() {
