fechas de creacion y modificacion

--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -79,10 +79,11 @@
     jQuery(document).ready(function( $ ) {
         $('#fechadenacimiento').datepicker({
             uiLibrary: 'bootstrap4',
-            format: 'yyyy-dd-mm'
+            format: 'yyyy-mm-dd'
         });
 
         $('#fechadenacimiento').change(function() {
+            const year = $(this).val()
             let nacimiento = new Date($(this).val());
             let diferenciaMs = new Date(Date.now() - nacimiento.getTime());
             let edad = Math.abs(diferenciaMs.getUTCFullYear() - 1970);
