--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-contactos" role="tabpanel" aria-labelledby="nav-contactos-tab">
-                        <div id="contactos" class="row"></div>
+                        <div id="contactos" class="col-12"></div>
                         <div class="col-12">
                             <button class="btn btn-success" id="agregar-contacto">Agregar Otro Contacto</button>
                         </div>
