--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -119,7 +119,7 @@
             agregarContacto(i);
         });
 
-        $('#eliminar-contacto').on('click', function() {
+        $('.eliminar-contacto').on('click', function() {
             var index = $(this).data("i");
             eliminarContacto(index);
         });
