--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -121,6 +121,7 @@
 
         $('.eliminar-contacto').on('click', function() {
             var index = $(this).data("i");
+            alert(index);
             eliminarContacto(index);
         });
 
