--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-contactos" role="tabpanel" aria-labelledby="nav-contactos-tab">
-                        <div id="contactos" class="col-12"></div>
+                        <div id="contactos" class="container-fluid"></div>
                         <div class="col-12">
                             <button class="btn btn-success" id="agregar-contacto">Agregar Otro Contacto</button>
                         </div>
@@ -121,28 +121,28 @@
 
         function agregarContacto(index) {
             var formulario = '\
-            <div id="contacto' + index + '" class="col-12">\
-                <div class="form-group col-12">\
+            <div id="contacto' + index + '" class="row">\
+                <div class="form-group col-12 col-sm-6">\
                     <label>Nombre</label>\
                     <input type="text" class="form-control" name="nombrescontacto[]">\
                 </div>\
-                <div class="form-group col-12">\
+                <div class="form-group col-12 col-sm-6">\
                     <label>Relación</label>\
                     <input type="text" class="form-control" name="relacionescontacto[]">\
                 </div>\
-                <div class="form-group col-12">\
+                <div class="form-group col-12 col-sm-6">\
                     <label>Domicilio</label>\
                     <input type="text" class="form-control" name="domicilioscontacto[]">\
                 </div>\
-                <div class="form-group col-12">\
+                <div class="form-group col-12 col-sm-6">\
                     <label>Teléfono Celular</label>\
                     <input type="text" class="form-control" name="celularescontacto[]">\
                 </div>\
-                <div class="form-group col-12">\
+                <div class="form-group col-12 col-sm-6">\
                     <label>Teléfono Casa</label>\
                     <input type="text" class="form-control" name="telcasacontacto[]">\
                 </div>\
-                <div class="form-group col-12">\
+                <div class="form-group col-12 col-sm-6">\
                     <label>Otro Teléfono</label>\
                     <input type="text" class="form-control" name="otrostelefonoscontacto[]">\
                 </div>\
