--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -86,7 +86,67 @@
                             <button class="btn btn-success" id="agregar-contacto">Agregar Otro Contacto</button>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="nav-riesgos-psicosociales" role="tabpanel" aria-labelledby="nav-riesgos-psicosociales-tab">...</div>
+                    <div class="tab-pane fade" id="nav-riesgos-psicosociales" role="tabpanel" aria-labelledby="nav-riesgos-psicosociales-tab">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-12">
+                                    <h3>Individuales</h3>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="1" name="riesgos_individuales[]" id="check_individual_1">
+                                    <label class="form-check-label" for="check_individual_1">
+                                        INICIO TEMPRANO AL TRABAJO INFANTIL
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="2" name="riesgos_individuales[]" id="check_individual_2">
+                                    <label class="form-check-label" for="check_individual_2">
+                                        AUSENTISMO ESCOLAR PRESENTE
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="3" name="riesgos_individuales[]" id="check_individual_3">
+                                    <label class="form-check-label" for="check_individual_3">
+                                        CAPACIDADES DIFERENTES
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="4" name="riesgos_individuales[]" id="check_individual_4">
+                                    <label class="form-check-label" for="check_individual_4">
+                                        AISLAMIENTO O TIMIDEZ
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="5" name="riesgos_individuales[]" id="check_individual_5">
+                                    <label class="form-check-label" for="check_individual_5">
+                                        AGRESIVO
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="6" name="riesgos_individuales[]" id="check_individual_6">
+                                    <label class="form-check-label" for="check_individual_6">
+                                        CONSUMO DE DROGAS
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="7" name="riesgos_individuales[]" id="check_individual_7">
+                                    <label class="form-check-label" for="check_individual_7">
+                                        INTENTO SUICIDA
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h3>Familiares</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h3>Entorno</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary" name="submitted">Guardar</button>
@@ -111,17 +171,17 @@
             $('#edad').val(edad);
             $('#edad-span').html(edad);
         });
-        
+
         var i = 0;
         agregarContacto(i);
-        $('#agregar-contacto').on('click', function() {
+        $('#agregar-contacto').on('click', function () {
             i++;
             agregarContacto(i);
         });
 
         function agregarContacto(index) {
             var formulario = '\
-            <div id="contacto' + index + '" class="row">\
+            <div id="contacto' + index + '" class="row border">\
                 <div class="form-group col-12 col-sm-6">\
                     <label>Nombre</label>\
                     <input type="text" class="form-control" name="nombrescontacto[]">\
@@ -155,7 +215,7 @@
             $('#contactos').append(formulario);
             $('#eliminar-btn0').remove();
 
-            $('#eliminar-contacto' + index).on('click', function() {
+            $('#eliminar-contacto' + index).on('click', function () {
                 var index = $(this).data("i");
                 eliminarContacto(index);
             });
